--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       .thermometer, .order, .social {
       /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
       height: 40px;
-        line-height: 40px;
+      line-height: 40px;
       }
       div.row {
-        border: 1px solid;
+      border: 1px solid;
       }
     </style>
   </head>
@@ -85,6 +85,11 @@
       <div class="row section2">
 	<div class="span12">
 	  Marketing Section 2
+	</div>
+      </div>
+      <div class="row faq">
+	<div class"span12">
+	  FAQ
 	</div>
       </div>
       <div class="row footer">
